Crash in node menu of the texture properties #86416

Closed
opened 2021-03-09 07:47:17 +01:00 by Sergey · 10 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: Intel(R) HD Graphics 630 Intel 4.5.0 - Build 25.20.100.6471

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-05 06:10, hash: b5d154f400

Short description of error

Malloc returns null: len=2147483648 in C:\b\buildbot-worker-windows\windows_master\blender.git\source\blender\blenlib\BLI_linear_allocator.hh:214, total 2709383540
Error   : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FFFD7E216E9
Module  : VCRUNTIME140.dll
Thread  : 000169b0

{F9880663, size=full}

Exact steps for others to reproduce the error

  1. Add new node tree in GN editor
  2. Past Attribute sample texture between group nodes
  3. Press New texture
  4. Open texture properties
  5. In the Geomentry menu of the Node Menu press Geometry nodes
  6. Wait a little
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: Intel(R) HD Graphics 630 Intel 4.5.0 - Build 25.20.100.6471 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-05 06:10, hash: `b5d154f400` **Short description of error** ``` Malloc returns null: len=2147483648 in C:\b\buildbot-worker-windows\windows_master\blender.git\source\blender\blenlib\BLI_linear_allocator.hh:214, total 2709383540 Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FFFD7E216E9 Module : VCRUNTIME140.dll Thread : 000169b0 ``` {[F9880663](https://archive.blender.org/developer/F9880663/2021-03-09_10-37-16.png), size=full} **Exact steps for others to reproduce the error** 1. Add new node tree in GN editor 2. Past Attribute sample texture between group nodes 3. Press New texture 4. Open texture properties 5. In the Geomentry menu of the Node Menu press Geometry nodes 6. Wait a little
Author

Added subscriber: @randum

Added subscriber: @randum
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-03-09 09:10:12 +01:00
Member

Can confirm, will check

Can confirm, will check
Member

note: the attribute search fields for Mapping and Result also do not work in the Properties Editor

note: the attribute search fields for `Mapping` and `Result` also do not work in the Properties Editor

This issue was referenced by 79bc4962d3

This issue was referenced by 79bc4962d376a37356752334d43021a18fbdba5b

This issue was referenced by cf2933c38a

This issue was referenced by cf2933c38a34b16bf00f7e888374a8f51d10a1ee

This issue was referenced by 53b82efed6

This issue was referenced by 53b82efed66baddff3b7ef6c93a919ef10f4ef42
Member

In #86416#1126615, @lichtwerk wrote:
note: the attribute search fields for Mapping and Result also do not work in the Properties Editor

fix for this is D10674: Fix (unreported) geometry node attribute search not working in the Properties Editor

there was one more issue: clicking the node link button would bring up an empty list, this is fixed by D10673: Add 'foreach_nodeclass' for geometry nodetrees

> In #86416#1126615, @lichtwerk wrote: > note: the attribute search fields for `Mapping` and `Result` also do not work in the Properties Editor fix for this is [D10674: Fix (unreported) geometry node attribute search not working in the Properties Editor](https://archive.blender.org/developer/D10674) there was one more issue: clicking the node link button would bring up an empty list, this is fixed by [D10673: Add 'foreach_nodeclass' for geometry nodetrees](https://archive.blender.org/developer/D10673)
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86416
No description provided.